--- a/conditional_remove/CMakeLists.txt
+++ b/conditional_remove/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
 
-project(cluster_segmented)
+project(conditional_removal)
 
 find_package(PCL 1.2 REQUIRED)
 
@@ -8,5 +8,5 @@ include_directories(${PCL_INCLUDE_DIRS})
 link_directories(${PCL_LIBRARY_DIRS})
 add_definitions(${PCL_DEFINITIONS})
 
-add_executable (cluster_segmented cluster_segmented.cpp)
-target_link_libraries (cluster_segmented ${PCL_LIBRARIES})
+add_executable (conditional_removal conditional_removal.cpp)
+target_link_libraries (conditional_removal ${PCL_LIBRARIES})
